<resources>
    <string name="app_name">Pimp My Meal</string>
    <string name="current_api_key">Current API key</string>
    <!-- User Preferences Keys -->
    <string name="diets_pref">Diet Preference</string>
    <string name="username_pref">Username Preference</string>
    <string name="password_pref">Password Preference</string>
    <string name="fav_recipes_pref">Favorite Recipes Preference</string>
    <!-- Recipe Activity and Preview -->
    <string name="recipe_name_description">Recipe name</string>
    <string name="recipe_source_description">Recipe source</string>
    <string name="browse_recipe">Browse recipe</string>
    <string name="recipe_image_description">Recipe Image</string>
    <string name="like_button">like button</string>
    <!-- Header -->
    <string name="logo_image">Logo image</string>
    <string name="header_menu_button">Header menu button</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <!-- Authentication Activities -->
    <string name="log_in">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="username_hint">Username…</string>
    <string name="password_hint">Password…</string>
    <string name="confirm_password_hint">Confirm Password…</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_btn">Already have an account</string>
    <string name="don_t_have_an_account_btn">Don\'t have an account?</string>
    <!-- Footer -->
    <string name="home_activity_navigation">Home activity navigation</string>
    <string name="search_activity_navigation">Search activity navigation</string>
    <string name="profile_activity_navigation">Profile activity navigation</string>
    <!-- Home Activity -->
    <string name="favorite_recipes">Favorite Recipes</string>
    <!-- Search Activity -->
    <string name="search_activity_title">Search for recipes !</string>
    <string name="search_hint">Ex: pasta, zucchini, mushrooms…</string>
    <string name="launch_search">Launch search !</string>
    <!-- Profile Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="diet">Diet</string>
    <string-array name="diets_array">
        <item>None</item>
        <item>Balanced</item>
        <item>High-Fiber</item>
        <item>High-Protein</item>
        <item>Low-Carb</item>
        <item>Low-Fat</item>
        <item>Low-Sodium</item>
        <item>Low-Carb</item>
    </string-array>
</resources>
