<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/login_activities_padding"
    tools:context=".ui.SignUpActivity">
    <!--TODO should extract buttons and text view styles to make it cleaner-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/big_title_padding_bottom"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/big_title_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_form_margin_bottom"
        android:background="@drawable/login_edit_texts"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="@dimen/auth_form_et_horizontal_padding"
        android:paddingVertical="@dimen/auth_form_et_vertical_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/auth_form_main_item_text_size"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_form_margin_bottom"
        android:background="@drawable/login_edit_texts"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/auth_form_et_horizontal_padding"
        android:paddingVertical="@dimen/auth_form_et_vertical_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/auth_form_main_item_text_size"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_form_margin_bottom"
        android:background="@drawable/login_edit_texts"
        android:hint="@string/confirm_password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/auth_form_et_horizontal_padding"
        android:paddingVertical="@dimen/auth_form_et_vertical_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/auth_form_main_item_text_size"
        android:textStyle="italic" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_form_margin_bottom"
        android:backgroundTint="@color/black"
        android:onClick="signUpClicked"
        android:paddingVertical="@dimen/auth_form_btn_vertical_padding"
        android:text="@string/register"
        android:textSize="@dimen/auth_form_main_item_text_size" />

    <Button
        android:id="@+id/sign_in_activity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auth_form_margin_bottom"
        android:backgroundTint="@color/auth_form_item_background"
        android:onClick="signInClicked"
        android:paddingVertical="@dimen/auth_form_btn_vertical_padding"
        android:text="@string/already_have_an_account_btn"
        android:textSize="@dimen/small_btn_text_size"
        android:textStyle="bold" />
</LinearLayout>
