<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.RecipeActivity">

    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium_title"
        android:text="@string/recipe_name_description"
        android:textAlignment="center"
        android:textSize="@dimen/size_medium_title"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding_small_title"
        app:layout_constraintTop_toBottomOf="@id/recipe_name">

        <TextView
            android:id="@+id/source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recipe_source_description"
            android:textSize="@dimen/size_small_title" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/favorite_recipe_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/like_button"
                app:srcCompat="@drawable/ic_baseline_thumb_up_empty_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end">

            <Button
                android:id="@+id/browse_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_theme"
                android:text="@string/browse_recipe" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/recipe_image_description"
        android:paddingVertical="@dimen/padding_big_title"
        android:src="@drawable/ic_baseline_image_search_24"
        app:layout_constraintHeight_percent=".33"
        app:layout_constraintTop_toBottomOf="@id/info_layout" />

    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:nestedScrollingEnabled="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_image" />

</androidx.constraintlayout.widget.ConstraintLayout>
