<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ProfileActivity">

    <com.example.pimpmymeal.ui.Header
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small_title"
            android:labelFor="@id/update_username_edit_text"
            android:text="@string/username"
            android:textSize="@dimen/size_small_title" />

        <EditText
            android:id="@+id/update_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_small_title"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small_title"
            android:labelFor="@id/update_password_edit_text"
            android:text="@string/password"
            android:textSize="@dimen/size_small_title" />

        <EditText
            android:id="@+id/update_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small_title"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small_title"
            android:labelFor="@id/diets_spinner"
            android:text="@string/diet"
            android:textSize="@dimen/size_small_title" />

        <Spinner
            android:id="@+id/diets_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_small_title"
            android:drawSelectorOnTop="true"
            android:entries="@array/diets_array" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_small_title"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_small_title"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

    <com.example.pimpmymeal.ui.Footer
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>
